<?xml version="1.0"?>
<package format="2">
  <name>gtri_based_fls</name>
  <version>0.0.1</version>
  <description>The gtri_based_fls_gazebo package</description>
  <maintainer email="bdallen@nps.edu">Bruce Allen</maintainer>
  <maintainer email="syllogismrxs@todo.todo">syllogismrxs</maintainer>
  <author email="bdallen@nps.edu">Bruce Allen</author>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>gazebo_dev</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
